--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/chrome": "^0.0.315",
     "chrome-types": "^0.1.347",
     "esbuild": "^0.25.2",
     "typescript": "^5.8.3"
