--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "scripts": {
     "build": "node build.js"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "tailwind": "^4.0.0"
   }
 }
