--- a/sneaky-lingo/public/manifest.json
+++ b/sneaky-lingo/public/manifest.json
@@ -7,5 +7,12 @@
     "default_popup": "index.html",
     "default_icon": "ninja_icon.png"
   },
-  "permissions": ["storage"]
+  "permissions": ["storage"],
+  "content_scripts": [
+    {
+      "js": ["content.js"],
+      "matches": ["<all_urls>"],
+      "run_at": "document_end"
+    }
+  ]
 }
