extracted to parent folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "lib": ["dom", "es2020"],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "outDir": "dist",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "typeRoots": ["node_modules/@types"],
-    "types": ["chrome"]
-  },
-  "include": ["src"]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
