--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,15 @@
 {
-  "name": "React Sneaky Lingo",
+  "name": "Sneaky Lingo",
   "description": "Base Level Extension",
-  "version": "2.0",
+  "version": "1.0",
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html",
     "default_icon": "ninja_icon.png"
+  },
+  "icons": {
+    "48": "ninja_icon_24.png",
+    "128": "ninja_icon_128.png"
   },
   "permissions": ["storage"],
   "content_scripts": [
